force-app/main/default/objects/Account/fields/Alternative_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Address__c</fullName>
    <description>description goes here</description>
    <inlineHelpText>help text goes here</inlineHelpText>
    <label>Alternative Address</label>
    <type>Address</type>
</CustomField>