force-app/main/default/objects/Account/fields/Average_Age__c.field-meta.xml
<CustomField>
    <fullName>Average_Age__c</fullName>
    <label>Average Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>