force-app/main/default/objects/Account/fields/Calculated_Age__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Age__c</fullName>
    <formula>Average_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>