force-app/main/default/objects/Account/fields/FLS_Values__c.field-meta.xml
<CustomField>
    <fullName>FLS_Values__c</fullName>
    <label>FLS Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>