force-app/main/default/objects/Account/fields/Gerry__c.field-meta.xml
<CustomField>
    <fullName>Gerry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gerry</label>
    <type>Checkbox</type>
</CustomField>