force-app/main/default/objects/Account/fields/Industry_Detail__c.field-meta.xml
<CustomField>
    <fullName>Industry_Detail__c</fullName>
    <formula>IF(  Salto_Employee__r.Email  == &quot;pgonzaleznetwork@gmail.com&quot;, &quot;No formula for Pablo!&quot;,TEXT(Type)  &amp;  &quot; - &quot; &amp; TEXT(Industry) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Detail</label>
    <type>Text</type>
</CustomField>