force-app/main/default/objects/Account/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Connection Established</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>