force-app/main/default/objects/Account/fields/Missing_field__c.field-meta.xml
<CustomField>
    <fullName>Missing_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing field</label>
    <type>Checkbox</type>
</CustomField>