force-app/main/default/objects/Account/fields/My_Broken_Picklist__c.field-meta.xml
<CustomField>
    <fullName>My_Broken_Picklist__c</fullName>
    <label>My Broken Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValueOne</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>