force-app/main/default/objects/Account/fields/My_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>My_Date_Time__c</fullName>
    <label>My Date Time</label>
    <type>DateTime</type>
</CustomField>