force-app/main/default/objects/Account/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>Name &amp; &quot;--this text is from formula---&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>