force-app/main/default/objects/Account/fields/NetSuite_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Id__c</fullName>
    <label>NetSuite Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>