force-app/main/default/objects/Account/fields/New_field__c.field-meta.xml
<CustomField>
    <fullName>New_field__c</fullName>
    <label>New field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>