force-app/main/default/objects/Account/fields/not_used__c.field-meta.xml
<CustomField>
    <fullName>not_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>not used</label>
    <type>Checkbox</type>
</CustomField>