force-app/main/default/objects/Account/fields/Oracle_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Id__c</fullName>
    <externalId>true</externalId>
    <label>Oracle Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>