force-app/main/default/objects/Account/fields/oracleId__c.field-meta.xml
<CustomField>
    <fullName>oracleId__c</fullName>
    <label>oracleId</label>
    <length>90</length>
    <type>Text</type>
</CustomField>