force-app/main/default/objects/Account/fields/oracleUserEmail__c.field-meta.xml
<CustomField>
    <fullName>oracleUserEmail__c</fullName>
    <label>oracleUserEmail</label>
    <type>Email</type>
</CustomField>