force-app/main/default/objects/Account/fields/original_lead__c.field-meta.xml
<CustomField>
    <fullName>original_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>original_lead__c</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>created_accounts</relationshipName>
    <type>Lookup</type>
</CustomField>