force-app/main/default/objects/Account/fields/Priority_Formula__c.field-meta.xml
<CustomField>
    <fullName>Priority_Formula__c</fullName>
    <formula>TEXT( CustomerPriority__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Formula</label>
    <type>Text</type>
</CustomField>