force-app/main/default/objects/Account/fields/really_not_used__c.field-meta.xml
<CustomField>
    <fullName>really_not_used__c</fullName>
    <label>really not used</label>
    <type>Email</type>
</CustomField>