force-app/main/default/objects/Account/fields/Salto_Employee__c.field-meta.xml
<CustomField>
    <fullName>Salto_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salto Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>