force-app/main/default/objects/Account/fields/saltoQuickStartField__c.field-meta.xml
<CustomField>
    <fullName>saltoQuickStartField__c</fullName>
    <label>saltoQuickStartField</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>