force-app/main/default/objects/Account/fields/Simple_Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>Simple_Text_Formula__c</fullName>
    <formula>&quot;hi&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Simple Text Formula</label>
    <type>Text</type>
</CustomField>