force-app/main/default/objects/Account/fields/UI_Mode__c.field-meta.xml
<CustomField>
    <fullName>UI_Mode__c</fullName>
    <label>UI Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>