force-app/main/default/objects/Account/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <label>Users</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User1</fullName>
            </value>
            <value>
                <fullName>User2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>