force-app/main/default/objects/Account/fields/Users_Formula__c.field-meta.xml
<CustomField>
    <fullName>Users_Formula__c</fullName>
    <formula>TEXT(Users__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Users Formula</label>
    <type>Text</type>
</CustomField>