force-app/main/default/objects/Account/recordTypes/Badge_Management.recordType-meta.xml
<RecordType>
    <fullName>Badge_Management</fullName>
    <active>true</active>
    <label>Badge Management</label>
</RecordType>