force-app/main/default/objects/Account/validationRules/address.validationRule-meta.xml
<ValidationRule>
    <fullName>address</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(ShippingAddress ))</errorConditionFormula>
    <errorMessage>Billing address cannot be blank</errorMessage>
</ValidationRule>