force-app/main/default/objects/Account/validationRules/Complex_formula.validationRule-meta.xml
<ValidationRule>
    <fullName>Complex_formula</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Owner.Contact.CreatedBy.Profile.Id = &quot;03d3h000000khEQ&quot;,TRUE,false)

&amp;&amp;

IF(($CustomMetadata.Trigger_Context_Status__mdt.by_handler.Enable_After_Insert__c ||

  $CustomMetadata.Trigger_Context_Status__mdt.by_class.DeveloperName = &quot;Default&quot;),true,FALSE)

&amp;&amp;

IF( ($Label.Details = &quot;Value&quot; || Parent.Parent.Parent.Owner.Contact.AssistantName = &quot;Marie&quot;), true ,false)

&amp;&amp; IF ( ( $ObjectType.Center__c.Fields.My_text_field__c = &quot;My_Text_Field__c&quot;) ,true,false)

&amp;&amp; IF ( ( $ObjectType.SRM_API_Metadata_Client_Setting__mdt.Fields.CreatedDate  = &quot;My_Text_Field__c&quot;) ,true,false)

&amp;&amp; IF ( ( TEXT($Organization.UiSkin) = &quot;lex&quot; ) ,true,false)

&amp;&amp; IF ( ( $Setup.Customer_Support_Setting__c.Email_Address__c = &quot;test@gmail.com&quot; ) ,true,false)

&amp;&amp; IF ( (  $User.CompanyName = &quot;acme&quot; ) ,true,false)</errorConditionFormula>
    <errorMessage>Customer priority cannot be High</errorMessage>
</ValidationRule>