force-app/main/default/objects/Account/validationRules/Invalid_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_name</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &quot;Invalid&quot;</errorConditionFormula>
    <errorMessage>This is not a good name!</errorMessage>
</ValidationRule>