force-app/main/default/objects/Account/validationRules/Only_admin_can_edit_account_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_admin_can_edit_account_number</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id = &apos;0053h000002JF4c&apos; &amp;&amp; ISCHANGED( AccountNumber )</errorConditionFormula>
    <errorMessage>Only the admin can edit the account number</errorMessage>
</ValidationRule>