force-app/main/default/objects/Account/validationRules/Priority_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(CustomerPriority__c,&quot;High&quot;) &amp;&amp;  ISBLANK(TEXT(Type))</errorConditionFormula>
    <errorMessage>Error adding in service</errorMessage>
</ValidationRule>