force-app/main/default/objects/Account/validationRules/Tamir_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Tamir_validation</fullName>
    <active>true</active>
    <errorConditionFormula>UPPER(Name) = &quot;TAMIR&quot;</errorConditionFormula>
    <errorMessage>Tamir is not a good name!</errorMessage>
</ValidationRule>